# ChIRCPanel

./: .gitignore  .gitmodules  CMakeLists.txt  QtIRC.pro  README.md  irc.cpp  irc.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
