project(ChIRCPanel)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Widgets REQUIRED)
set(CMAKE_CXX_FLAGS "-pthread -g")
set(SOURCES main.cpp mainwindow.cpp irc.cpp)
set(HEADERS mainwindow.hpp irc.hpp)
set(UI mainwindow.ui)
add_executable(${CMAKE_PROJECT_NAME} ${SOURCES} ${HEADERS} ${UI})
target_link_libraries(${CMAKE_PROJECT_NAME} Qt5::Widgets)
add_subdirectory(ChIRC)
